--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "database_development",
+    "password": "koushik@123",
+    "database": "Authentication_DB",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
